[package]
authors = ["ehsan2003.2003.382@gmail.com"]
description = "crawl links from a website"
edition = "2021"
license = "MIT"
name = "link-crawler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.10", features = ["derive"]}
regex = "1.5.4"
reqwest = {version = "0.11.9", features = ["blocking"]}
scraper = "0.12.0"
url = "2.2.2"
